--- a/rtem-hackathon/pyproject.toml
+++ b/rtem-hackathon/pyproject.toml
@@ -16,6 +16,7 @@ python = "^3.9"
 pandas = "^1.4.2"
 tqdm = "^4.64.0"
 requests-cache = "^0.9.4"
+xlrd = "^2.0.1"
 
 [tool.poetry.dev-dependencies]
 
